--- a/AUTHORS
+++ b/AUTHORS
@@ -41,3 +41,4 @@ List of contributors, in chronological order:
 * Raul Benencia (https://github.com/rul)
 * Don Kuntz (https://github.com/dkuntz2)
 * Joshua Colson (https://github.com/freakinhippie)
+* You-Sheng Yang (https://github.com/vicamo)
